# trajopt-reimpl

./: CMakeLists.txt  README.md
demo/arm_2d/: arm_2d_demo.cpp
include/collision/: gjk.hpp  signed_distance.hpp
include/robot/: arm.hpp  se3.hpp
include/scp/: solver.hpp  trajopt.hpp
python/: visualize.py
tests/: test_gjk.cpp  test_scp.cpp  test_se3.cpp
